	PR ada/77968 	* gcc-interface/utils.c (create_var_decl): Do not clear TREE_READONLY 	in LTO mode for an external variable. 	(can_materialize_object_renaming_p): Move up.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@241154 138bc75d-0d04-0410-961f-82ee72b054a4